@@ -44,13 +44,26 @@ public abstract class Axiomatic extends SimilarityBase {
   protected final int queryLen;
 
   /**
-   * Constructor setting all Axiomatic hyperparameters
+   * Constructor setting all Axiomatic hyperparameters and using default discountOverlaps value.
    *
    * @param s hyperparam for the growth function
    * @param queryLen the query length
    * @param k hyperparam for the primitive weighting function
    */
   public Axiomatic(float s, int queryLen, float k) {
+    this(true, s, queryLen, k);
+  }
+
+  /**
+   * Constructor setting all Axiomatic hyperparameters
+   *
+   * @param discountOverlaps true if overlap tokens should not impact document length for scoring.
+   * @param s hyperparam for the growth function
+   * @param queryLen the query length
+   * @param k hyperparam for the primitive weighting function
+   */
+  public Axiomatic(boolean discountOverlaps, float s, int queryLen, float k) {
+    super(discountOverlaps);
     if (Float.isFinite(s) == false || Float.isNaN(s) || s < 0 || s > 1) {
       throw new IllegalArgumentException("illegal s value: " + s + ", must be between 0 and 1");
     }
